# CodeWizard2

./: CMakeLists.txt  CMakePresets.json  README.md  ae7319c0-21ed-4729-b89d-45886ff41ca1.json  application.cpp  application.h  b6502e2d-feb2-470b-8e4c-5df642395a4a.json  brokenstatemenu.cpp  brokenstatemenu.h  button.cpp  button.h  chat.cpp  chat.h  checkbox.cpp  checkbox.h  codeedit.cpp  codeedit.h  compare.cpp  compare.h  curler.cpp  curler.h  editor.cpp  editor.h  filetree.cpp  filetree.h  helper_types.h  highlighter.cpp  highlighter.h  imageview.cpp  imageview.h  label.cpp  label.h  languageserverclient.cpp  languageserverclient.h  linenumbers.cpp  linenumbers.h  listbox.cpp  listbox.h  lspdebug.cpp  lspdebug.h  (+27 more)
highlightingfiles/: JavaScript.tmLanguage.json
